# heribert-roig-personal

./: .gitignore  README.md  pyproject.toml
udacity_courses/project_1/: README.md
udacity_courses/project_1/features/: feature_engineer.py  ifeature_engineer.py
udacity_courses/project_1/notebooks/: boston_insights.ipynb
udacity_courses/project_1/utils/: utils.py
udacity_courses/project_3/: README.md
udacity_courses/project_3/notebooks/: ETL Pipeline Preparation.ipynb  ML Pipeline Preparation.ipynb
udacity_courses/project_3/scripts/: process_data.py  train_classifier.py
udacity_courses/project_3/web_application/app/: run.py
udacity_courses/project_3/web_application/data/: process_data.py
udacity_courses/project_3/web_application/models/: train_classifier.py
